[package]
name = "employees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
env_logger = "0.10"
lazy_static = "1.4"
listenfd = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
r2d2 = "0.8"
uuid = { version = "1.6", features = ["serde", "v4"] }